# forgent

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
assets/brand/: colors.css  colors.json  colors.scss  demo.tape
docs/: INTEGRATION.md  ROADMAP.md  brand.md  github-repo-setup.md
docs/launch/: show-hn.md  social.md
examples/: 01_quickstart.py  02_forge_specialist.py  03_memory_recall.py  04_custom_adapter.py  README.md
scripts/: build-assets.sh  install.sh  setup-mcp.sh
src/forgent/: __init__.py  cli.py  config.py  embeddings.py  ide_setup.py  marketplace.py  mcp_server.py  orchestrator.py  progress.py  statusline.py  theme.py  themes.py
src/forgent/adapters/: __init__.py  base.py  claude_code.py  mcp_server.py  python_framework.py
src/forgent/memory/: __init__.py  store.py
src/forgent/planner/: __init__.py  planner.py
src/forgent/registry/: __init__.py  catalog.yaml  dynamic.yaml  forge.py  loader.py
src/forgent/registry/agents/claude_code/: __init__.py  tovo-specialist.md
src/forgent/registry/agents/python_framework/: workflow-deep-orchestrator.md  workflow-evaluator-optimizer.md  workflow-orchestrator-pattern.md  workflow-router.md
src/forgent/router/: __init__.py  router.py
src/forgent/verify/: __init__.py  runner.py
src/orchestrator/: __init__.py  cli.py  mcp_server.py  orchestrator.py
src/orchestrator/adapters/: __init__.py  base.py  claude_code.py  mcp_server.py  python_framework.py
src/orchestrator/memory/: __init__.py  store.py
src/orchestrator/registry/: __init__.py  forge.py  loader.py
src/orchestrator/registry/agents/: __init__.py
src/orchestrator/registry/agents/python_framework/: workflow-parallel.md  workflow-swarm.md
src/orchestrator/router/: __init__.py  router.py
tests/: test_smoke.py  test_statusline.py  test_v04_features.py
