[project]
name = "forgent"
version = "0.1.0"
description = "Meta-orchestrator routing tasks across the best agents from Claude Code subagents, Python frameworks (LangGraph/CrewAI), and MCP servers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ali Al Aayedi", email = "ali.alaayedi@gmail.com" }]
dependencies = [
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
langgraph = ["langgraph>=0.2.0", "langchain>=0.3.0", "langchain-anthropic>=0.2.0"]
crewai = ["crewai>=0.80.0"]
mcp = ["mcp>=1.0.0"]
all = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "crewai>=0.80.0",
    "mcp>=1.0.0",
]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
forgent = "forgent.cli:app"
forgent-mcp = "forgent.mcp_server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"forgent.registry" = ["*.yaml"]
"forgent.registry.agents.claude_code" = ["*.md"]
